--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.4.0"
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
