--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.2.0",
     "tsparticles": "^3.8.1",
     "tsparticles-slim": "^2.12.0"
   },
